// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseSummary Components Shows one professor in a list 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="ui header"
        >
          COMS4771
           
          Machine Learning
        </div>
        <div>
           Department: 
          Computer Science
           
        </div>
        <div>
          Professors:
           
          <span>
            <a
              href="/professor/1"
            >
              <span>
                Nakul
                 
                Verma
              </span>
            </a>
            
          </span>
        </div>
        <a
          href="/review"
        >
          <button
            class="ui yellow compact button"
          >
            WRITE A REVIEW FOR 
            Machine Learning
          </button>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="ui header"
      >
        COMS4771
         
        Machine Learning
      </div>
      <div>
         Department: 
        Computer Science
         
      </div>
      <div>
        Professors:
         
        <span>
          <a
            href="/professor/1"
          >
            <span>
              Nakul
               
              Verma
            </span>
          </a>
          
        </span>
      </div>
      <a
        href="/review"
      >
        <button
          class="ui yellow compact button"
        >
          WRITE A REVIEW FOR 
          Machine Learning
        </button>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CourseSummary Components Shows six professors in a list 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="ui header"
        >
          COMS4771
           
          Machine Learning
        </div>
        <div>
           Department: 
          Computer Science
           
        </div>
        <div
          class="accordion ui"
        >
          <h3
            class="title"
          >
            <i
              aria-hidden="true"
              class="angle down icon"
            />
            Show
             all professors who teach this course
          </h3>
          <div
            class="content"
          >
            <table
              class="ui very basic left aligned table"
            >
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class=""
                  >
                    <a
                      href="/professor/1"
                    >
                      <span>
                        Professor
                         
                        One
                      </span>
                    </a>
                  </td>
                  <td
                    class=""
                  >
                    <span>
                      1
                      : 
                      Computer Science
                      , 
                    </span>
                    <span>
                      2
                      : 
                      Law
                      
                    </span>
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                  >
                    <a
                      href="/professor/2"
                    >
                      <span>
                        Professor
                         
                        Two
                      </span>
                    </a>
                  </td>
                  <td
                    class=""
                  >
                    <span>
                      1
                      : 
                      Computer Science
                      , 
                    </span>
                    <span>
                      2
                      : 
                      Law
                      
                    </span>
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                  >
                    <a
                      href="/professor/3"
                    >
                      <span>
                        Professor
                         
                        Three
                      </span>
                    </a>
                  </td>
                  <td
                    class=""
                  >
                    <span>
                      1
                      : 
                      Computer Science
                      , 
                    </span>
                    <span>
                      2
                      : 
                      Law
                      
                    </span>
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                  >
                    <a
                      href="/professor/4"
                    >
                      <span>
                        Professor
                         
                        Four
                      </span>
                    </a>
                  </td>
                  <td
                    class=""
                  >
                    <span>
                      1
                      : 
                      Computer Science
                      , 
                    </span>
                    <span>
                      2
                      : 
                      Law
                      
                    </span>
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                  >
                    <a
                      href="/professor/5"
                    >
                      <span>
                        Professor
                         
                        Five
                      </span>
                    </a>
                  </td>
                  <td
                    class=""
                  >
                    <span>
                      1
                      : 
                      Computer Science
                      , 
                    </span>
                    <span>
                      2
                      : 
                      Law
                      
                    </span>
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                  >
                    <a
                      href="/professor/6"
                    >
                      <span>
                        Professor
                         
                        Six
                      </span>
                    </a>
                  </td>
                  <td
                    class=""
                  >
                    <span>
                      1
                      : 
                      Computer Science
                      , 
                    </span>
                    <span>
                      2
                      : 
                      Law
                      
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <a
          href="/review"
        >
          <button
            class="ui yellow compact button"
          >
            WRITE A REVIEW FOR 
            Machine Learning
          </button>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="ui header"
      >
        COMS4771
         
        Machine Learning
      </div>
      <div>
         Department: 
        Computer Science
         
      </div>
      <div
        class="accordion ui"
      >
        <h3
          class="title"
        >
          <i
            aria-hidden="true"
            class="angle down icon"
          />
          Show
           all professors who teach this course
        </h3>
        <div
          class="content"
        >
          <table
            class="ui very basic left aligned table"
          >
            <tbody>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <a
                    href="/professor/1"
                  >
                    <span>
                      Professor
                       
                      One
                    </span>
                  </a>
                </td>
                <td
                  class=""
                >
                  <span>
                    1
                    : 
                    Computer Science
                    , 
                  </span>
                  <span>
                    2
                    : 
                    Law
                    
                  </span>
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <a
                    href="/professor/2"
                  >
                    <span>
                      Professor
                       
                      Two
                    </span>
                  </a>
                </td>
                <td
                  class=""
                >
                  <span>
                    1
                    : 
                    Computer Science
                    , 
                  </span>
                  <span>
                    2
                    : 
                    Law
                    
                  </span>
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <a
                    href="/professor/3"
                  >
                    <span>
                      Professor
                       
                      Three
                    </span>
                  </a>
                </td>
                <td
                  class=""
                >
                  <span>
                    1
                    : 
                    Computer Science
                    , 
                  </span>
                  <span>
                    2
                    : 
                    Law
                    
                  </span>
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <a
                    href="/professor/4"
                  >
                    <span>
                      Professor
                       
                      Four
                    </span>
                  </a>
                </td>
                <td
                  class=""
                >
                  <span>
                    1
                    : 
                    Computer Science
                    , 
                  </span>
                  <span>
                    2
                    : 
                    Law
                    
                  </span>
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <a
                    href="/professor/5"
                  >
                    <span>
                      Professor
                       
                      Five
                    </span>
                  </a>
                </td>
                <td
                  class=""
                >
                  <span>
                    1
                    : 
                    Computer Science
                    , 
                  </span>
                  <span>
                    2
                    : 
                    Law
                    
                  </span>
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <a
                    href="/professor/6"
                  >
                    <span>
                      Professor
                       
                      Six
                    </span>
                  </a>
                </td>
                <td
                  class=""
                >
                  <span>
                    1
                    : 
                    Computer Science
                    , 
                  </span>
                  <span>
                    2
                    : 
                    Law
                    
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <a
        href="/review"
      >
        <button
          class="ui yellow compact button"
        >
          WRITE A REVIEW FOR 
          Machine Learning
        </button>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CourseSummary Components empty professors CourseSummary 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="ui header"
        >
          COMS4771
           
          Machine Learning
        </div>
        <div>
           Department: 
          Computer Science
           
        </div>
        <div>
          Professors:
           
          <span>
            <a
              href="/professor/0"
            >
              <span>
                
                 
                
              </span>
            </a>
            
          </span>
        </div>
        <a
          href="/review"
        >
          <button
            class="ui yellow compact button"
          >
            WRITE A REVIEW FOR 
            Machine Learning
          </button>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="ui header"
      >
        COMS4771
         
        Machine Learning
      </div>
      <div>
         Department: 
        Computer Science
         
      </div>
      <div>
        Professors:
         
        <span>
          <a
            href="/professor/0"
          >
            <span>
              
               
              
            </span>
          </a>
          
        </span>
      </div>
      <a
        href="/review"
      >
        <button
          class="ui yellow compact button"
        >
          WRITE A REVIEW FOR 
          Machine Learning
        </button>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CourseSummary Components empty props CourseSummary 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="ui header"
        >
          
           
          
        </div>
        <div>
           Department: 
          
           
        </div>
        <div>
          Professors:
           
          <span>
            <a
              href="/professor/0"
            >
              <span>
                
                 
                
              </span>
            </a>
            
          </span>
        </div>
        <a
          href="/review"
        >
          <button
            class="ui yellow compact button"
          >
            WRITE A REVIEW FOR 
            
          </button>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="ui header"
      >
        
         
        
      </div>
      <div>
         Department: 
        
         
      </div>
      <div>
        Professors:
         
        <span>
          <a
            href="/professor/0"
          >
            <span>
              
               
              
            </span>
          </a>
          
        </span>
      </div>
      <a
        href="/review"
      >
        <button
          class="ui yellow compact button"
        >
          WRITE A REVIEW FOR 
          
        </button>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
